--- a/Front-End/pages/Contato/index.html
+++ b/Front-End/pages/Contato/index.html
@@ -8,7 +8,14 @@
       <link rel="stylesheet" href="fonts/icomoon/style.css">
       <link rel="stylesheet" href="css/owl.carousel.min.css">
       <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
       <!-- Style -->
       <link rel="stylesheet" href="css/style.css">
       <!-- CSS -->
@@ -19,6 +26,42 @@
    </head>
    <body>
       <!-- Navbar -->
+      <!-- Responsivo-->
+  <nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../Home/index.html">
+        <img src="../assets/images/LOGO.svg" width="200" height="90">
+      </a>
+      <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+        <span class="navbar-toggler-icon" ></span>
+      </button>
+      <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+        <div class="offcanvas-header">
+            <a href="../Home/index.html">
+                <img src="../assets/images/LOGO.svg" width="200" height="90">
+              </a>
+          <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+                <a class="nav-link" href="../Home/index.html">Home</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="../Sobre/index.html">Sobre<span class="sr-only">(Página
+                  atual)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../Contato/index.html">Contato</a>
+            </li>
+            </ul>
+           
+    
+        </div>
+      </div>
+    </div>
+  </nav>
+<!-- Fim Responsivo-->
       <div class="container" id="nav-container">
          <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#">
