--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
         <div class="container-fluid">
           <a class="navbar-brand" href="../Home/index.html">
-            <img src="../assets/images/LOGO.svg" width="200" height="90">
+            <img src="../assets/images/ComLogo-SemImoveis.svg" width="220" height="90">
           </a>
           <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon" ></span>
@@ -40,7 +40,7 @@
           <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
                 <a href="../Home/index.html">
-                    <img src="../assets/images/LOGO.svg" width="200" height="90">
+                    <img src="../assets/images/ComLogo-SemImoveis.svg" width="200" height="90">
                   </a>
               <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
@@ -67,7 +67,7 @@
 <div class="container" id="nav-container">
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-            <img src="../assets/images/LOGO.svg" width="260" height="290" class="d-inline-block align-top" alt="">
+            <img src="../assets/images/ComLogo-SemImoveis.svg" width="240" height="90" class="d-inline-block align-top" alt="">
         </a>
         <div class="collapse navbar-collapse justify-content-end" id="nav-layout">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -91,7 +91,7 @@
         </div>
     </nav>
 </div>
-<hr>
+
 <!-- Fim Navbar -->
 
 <!-- Banner -->
