Fixing the navbar

--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -29,6 +29,7 @@
 <!-- Navbar -->
 
 <!-- Responsivo-->
+
     <nav class="navbar navbar-dark navbar-expand-xsm bg-dark fixed-top" id="nav-mobile">
         <div class="container-fluid">
           <a class="navbar-brand" href="../Home/index.html">
@@ -64,7 +65,7 @@
         </div>
       </nav>
   <!-- Fim Responsivo-->
-<div class="container" id="nav-container">
+<div class="row" id="nav-container">
     <nav class="navbar navbar-custom navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
             <img src="../assets/images/ComLogo-SemImoveis.svg" width="240" height="90" class="d-inline-block align-top" alt="">
@@ -91,7 +92,7 @@
         </div>
     </nav>
 </div>
-
+ 
 <!-- Fim Navbar -->
 
 <!-- Banner -->
