--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -67,18 +67,18 @@
             <div class="offcanvas offcanvas-end text-bg-light" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
               <div class="offcanvas-header">
                   <a href="../Home/index.html">
-                      <img src="../assets/images/ComLogo-SemImoveis.svg" width="200" height="90">
+                      <img src="../assets/images/ComLogo-SemImoveis.svg" class="logo-nav">
                     </a>
                 <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="../Home/index.html">Home<span class="sr-only">(Página
-                              atual)</span></a>
-                  </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                      <a class="nav-link" href="../Home/index.html">Home</a>
+                  </li>
+                  <li class="nav-item active">
+                      <a class="nav-link" href="../Sobre/index.html">Sobre<span class="sr-only">(Página
+                        atual)</span></a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="../Contato/index.html">Contato</a>
@@ -103,12 +103,12 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                   <ul class="navbar-nav">
-                      <li class="nav-item active">
-                          <a class="nav-link" href="../Home/index.html">Home<span class="sr-only">(Página
-                                  atual)</span></a>
-                      </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="../Sobre/index.html">Sobre</a>
+                          <a class="nav-link" href="../Home/index.html">Home</a>
+                      </li>
+                      <li class="nav-item active">
+                          <a class="nav-link" href="../Sobre/index.html">Sobre<span class="sr-only">(Página
+                            atual)</span></a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="../Contato/index.html">Contato</a>
@@ -192,11 +192,7 @@
           </div>
           <div class="col-md-6 item text">
             <h3>Sobre nós</h3>
-            <p>Amet minim mollit non deserunt
-              ullamco est sit aliqua dolor do amet
-              sint. Velit officia consequat duis
-              enim velit mollit. Exercitation veniam
-              consequat sunt nostrud amet.</p>
+            <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
           </div>
           <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
                 class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
