Some css changes

--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -169,37 +169,38 @@
     </div>
   </div>
 
-  <!--Footer-->
-  <div class="footer-dark ">
-    <footer>
+ <!--Footer-->
+<div class="footer-dark ">
+  <footer>
       <div class="container ">
-        <div class="row">
-          <div class="col-sm-6 col-md-3 item">
-            <ul>
-              <li>
-                <a class="align-top" href="#">
-                  <img src="../assets/images/Logo footer.svg" width="160" height="190" class="d-inline-block align-top"
-                    alt="">
-                </a>
-              </li>
-            </ul>
+          <div class="row" id="footer-items">
+              <div class="col-sm-6 col-md-3 item">
+                  <ul>
+                      <li>
+                          <a class="align-top" href="#">
+                              <img src="../assets/images/ComLogo-SemImoveis-Branca.svg" width="160" height="190"
+                                  class="d-inline-block align-top" alt="">
+                          </a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-sm-6 col-md-3 item">
+                  <h3>Localização</h3>
+                  <ul>
+                      <p>Edifício central sala 112 setor central do Gama</p>
+                  </ul>
+              </div>
+              <div class="col-md-6 item text">
+                  <h3>Sobre nós</h3>
+                  <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
+              </div>
+              <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
+                          class="icon ion-social-linkedin"></i></a><a href="#"><i
+                          class="icon ion-social-instagram"></i></a></div>
           </div>
-          <div class="col-sm-6 col-md-3 item">
-            <h3>Localização</h3>
-            <ul>
-              <p>Edifício central sala 112 setor central do Gama</p>
-            </ul>
-          </div>
-          <div class="col-md-6 item text">
-            <h3>Sobre nós</h3>
-            <p>A empresa C Oliveira Imoveis que tem como razão social C Oliveira Empreendimentos Imobiliarios Ltda foi fundada em 03/01/2018 e está cadastrada na Solutudo no segmento de Imobiliárias</p>
-          </div>
-          <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
-        </div>
-        <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
+          <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
       </div>
-    </footer>
+  </footer>
 </body>
 
 </html>
