--- a/Front-End/pages/Contato/index.html
+++ b/Front-End/pages/Contato/index.html
@@ -77,15 +77,15 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../Home/index.html">Home<span class="sr-only">(Página
-                            atual)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="../Home/index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../Sobre/index.html">Sobre</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../Contato/index.html">Contato</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../Contato/index.html">Contato<span class="sr-only">(Página
+                     atual)</span></a>
                 </li>
             </ul>
         </div>
@@ -152,17 +152,12 @@
             </div>
          </div>
       </div>
-      <script src="js/jquery-3.3.1.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/jquery.validate.min.js"></script>
-      <script src="js/main.js"></script>
-    
-<!--Footer-->
-<div class="footer-dark ">
+
+       <!--Footer-->
+ <div class="footer-dark ">
    <footer>
        <div class="container ">
-           <div class="row">
+           <div class="row" id="footer-items">
                <div class="col-sm-6 col-md-3 item">
                    <ul>
                        <li>
@@ -189,6 +184,14 @@
            </div>
            <p class="copyright">C OLIVEIRA empreendimentos imobiliários Ltda © 2022</p>
        </div>
+
    </footer>
+
+      <script src="js/jquery-3.3.1.min.js"></script>
+      <script src="js/popper.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/jquery.validate.min.js"></script>
+      <script src="js/main.js"></script>
    </body>
+  
 </html>
