--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -370,7 +370,7 @@
 <div class="footer-dark ">
     <footer>
         <div class="container ">
-            <div class="row">
+            <div class="row" id="footer-items">
                 <div class="col-sm-6 col-md-3 item">
                     <ul>
                         <li>
