Some changes on mobile version

--- a/Front-End/pages/Sobre/index.html
+++ b/Front-End/pages/Sobre/index.html
@@ -168,7 +168,10 @@
       </div>
     </div>
   </div>
-
+<!-- Whatsapp-->
+<a class="whatsapp-link" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">
+  <i class="icon ion-social-whatsapp" id="whatsapp"></i>
+  </a>
  <!--Footer-->
 <div class="footer-dark ">
   <footer>
