--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -129,7 +129,7 @@
 </div>
 <!-- Fim Banner -->
 <!-- Whatsapp-->
-<a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=556185487108" target="_blank">
+<a class="whatsapp-link" href="https://api.whatsapp.com/send?phone=5561996511007&text=Olá" target="_blank">
     <i class="icon ion-social-whatsapp" id="whatsapp"></i>
     </a>
 <!--Card images-->
