--- a/Front-End/pages/Home/index.html
+++ b/Front-End/pages/Home/index.html
@@ -51,8 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../Sobre/index.html">Sobre</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="../Sobre/index.html">Sobr3</a>
+                        <a class="nav-link" href="../Sobre/index.html">Serviços</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Contato/index.html">Contato</a>
